-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u51
-
Component/s: hotspot
-
b02
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8060897 | 7u79 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8057325 | 7u76 | Poonam Bajaj Parhar | P3 | Closed | Fixed | b01 |
The increase in the minor GC times with jdk7 is due to the fact that in jdk7 Intern strings and Class-statics were moved to the Java Heap from the PermGen, and these Intern strings and Class-statics are also collected as part of the young generation collections. That causes increase in the minor collection pauses.
There is a debug option 'JavaObjectsInPerm' which can be used to revert the above change and with this option enabled intern strings and class statics get allocated into the PermGen again.
There is a debug option 'JavaObjectsInPerm' which can be used to revert the above change and with this option enabled intern strings and class statics get allocated into the PermGen again.
- backported by
-
JDK-8060897 Minor GC times doubled from JDK 6u35 to JDK 7u51
-
- Resolved
-
-
JDK-8057325 Minor GC times doubled from JDK 6u35 to JDK 7u51
-
- Closed
-
- relates to
-
JDK-8079128 ParNewGC times doubled from Java SE 6 to Java SE 9
-
- Closed
-