8048271: Minor GC times doubled from JDK 6u35 to JDK 7u51 Summary: Made JavaObjectsInPerm a diagnostic option Reviewed-by: jmasa, kevinw